eql-compiler/src/main/java/cz/vutbr/fit/knot/enticing/eql/compiler/parser/EqlParser.java
// Generated from /home/dkozak/projects/knot/enticing/eql-compiler/src/main/resources/Eql.g4 by ANTLR 4.7.2
package cz.vutbr.fit.knot.enticing.eql.compiler.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EqlParser extends Parser {
    public static final int
            ASSIGN = 1, MINUS = 2, COLON = 3, EXPONENT = 4, SIMILARITY = 5, SENT = 6, PAR = 7, QUOTATION = 8,
            QUERY_CONSTRAINT_SEPARATOR = 9, EQ = 10, NEQ = 11, LT = 12, PAREN_LEFT = 13, PAREN_RIGHT = 14,
            BRACKET_LEFT = 15, BRACKET_RIGHT = 16, RANGE = 17, DOT = 18, OR = 19, AND = 20, NOT = 21,
            NUMBER = 22, DATE = 23, WORD = 24, WS = 25;
    public static final int
            RULE_root = 0, RULE_query = 1, RULE_queryElem = 2, RULE_proximity = 3,
            RULE_alignOperator = 4, RULE_alignElem = 5, RULE_assignment = 6, RULE_contextConstraint = 7,
            RULE_indexOperator = 8, RULE_queryLiteral = 9, RULE_interval = 10, RULE_constraint = 11,
            RULE_reference = 12, RULE_comparisonOperator = 13, RULE_binaryOperator = 14,
            RULE_unaryOperator = 15;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public EqlParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "root", "query", "queryElem", "proximity", "alignOperator", "alignElem",
                "assignment", "contextConstraint", "indexOperator", "queryLiteral", "interval",
                "constraint", "reference", "comparisonOperator", "binaryOperator", "unaryOperator"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "':='", "'-'", "':'", "'^'", "'~'", "'_SENT_'", "'_PAR_'", "'\"'",
                "'&&'", "'='", "'!='", "'<'", "'('", "')'", "'['", "']'", "'..'", "'.'",
                "'|'", "'&'", "'!'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "ASSIGN", "MINUS", "COLON", "EXPONENT", "SIMILARITY", "SENT", "PAR",
                "QUOTATION", "QUERY_CONSTRAINT_SEPARATOR", "EQ", "NEQ", "LT", "PAREN_LEFT",
                "PAREN_RIGHT", "BRACKET_LEFT", "BRACKET_RIGHT", "RANGE", "DOT", "OR",
                "AND", "NOT", "NUMBER", "DATE", "WORD", "WS"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Eql.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final RootContext root() throws RecognitionException {
        RootContext _localctx = new RootContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_root);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(32);
                query();
                setState(35);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == QUERY_CONSTRAINT_SEPARATOR) {
                    {
                        setState(33);
                        match(QUERY_CONSTRAINT_SEPARATOR);
                        setState(34);
                        constraint(0);
                    }
                }

                setState(37);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final QueryContext query() throws RecognitionException {
        QueryContext _localctx = new QueryContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_query);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(40);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(39);
                            queryElem(0);
                        }
                    }
                    setState(42);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << QUOTATION) | (1L << PAREN_LEFT) | (1L << BRACKET_LEFT) | (1L << NOT) | (1L << NUMBER) | (1L << WORD))) != 0));
                setState(45);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SIMILARITY) {
                    {
                        setState(44);
                        proximity();
                    }
                }

                setState(48);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == MINUS) {
                    {
                        setState(47);
                        contextConstraint();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final QueryElemContext queryElem() throws RecognitionException {
        return queryElem(0);
    }

    private QueryElemContext queryElem(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        QueryElemContext _localctx = new QueryElemContext(_ctx, _parentState);
        QueryElemContext _prevctx = _localctx;
        int _startState = 4;
        enterRecursionRule(_localctx, 4, RULE_queryElem, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(115);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 17, _ctx)) {
                    case 1: {
                        _localctx = new SequenceContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;

                        setState(52);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == NUMBER || _la == WORD) {
                            {
                                setState(51);
                                assignment();
                            }
                        }

                        setState(54);
                        match(QUOTATION);
                        setState(56);
                        _errHandler.sync(this);
                        _alt = 1;
                        do {
                            switch (_alt) {
                                case 1: {
                                    {
                                        setState(55);
                                        queryElem(0);
                                    }
                                }
                                break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                            setState(58);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                        } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
                        setState(60);
                        match(QUOTATION);
                    }
                    break;
                    case 2: {
                        _localctx = new IndexWithSingleValueContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(63);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                            case 1: {
                                setState(62);
                                assignment();
                            }
                            break;
                        }
                        setState(66);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                            case 1: {
                                setState(65);
                                indexOperator();
                            }
                            break;
                        }
                        setState(68);
                        queryLiteral();
                        setState(70);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                            case 1: {
                                setState(69);
                                alignOperator();
                            }
                            break;
                        }
                    }
                    break;
                    case 3: {
                        _localctx = new IndexWithMultipleValuesContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(73);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
                            case 1: {
                                setState(72);
                                assignment();
                            }
                            break;
                        }
                        setState(75);
                        indexOperator();
                        setState(76);
                        match(PAREN_LEFT);
                        setState(77);
                        match(WORD);
                        setState(82);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == OR) {
                            {
                                {
                                    setState(78);
                                    match(OR);
                                    setState(79);
                                    match(WORD);
                                }
                            }
                            setState(84);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(85);
                        match(PAREN_RIGHT);
                        setState(87);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
                            case 1: {
                                setState(86);
                                alignOperator();
                            }
                            break;
                        }
                    }
                    break;
                    case 4: {
                        _localctx = new ParenContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(90);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == NUMBER || _la == WORD) {
                            {
                                setState(89);
                                assignment();
                            }
                        }

                        setState(92);
                        match(PAREN_LEFT);
                        setState(94);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(93);
                                    queryElem(0);
                                }
                            }
                            setState(96);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << QUOTATION) | (1L << PAREN_LEFT) | (1L << BRACKET_LEFT) | (1L << NOT) | (1L << NUMBER) | (1L << WORD))) != 0));
                        setState(98);
                        match(PAREN_RIGHT);
                        setState(100);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
                            case 1: {
                                setState(99);
                                proximity();
                            }
                            break;
                        }
                    }
                    break;
                    case 5: {
                        _localctx = new OrderContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(102);
                        assignment();
                        setState(103);
                        queryElem(0);
                        setState(104);
                        match(LT);
                        setState(105);
                        queryElem(0);
                        setState(107);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 15, _ctx)) {
                            case 1: {
                                setState(106);
                                proximity();
                            }
                            break;
                        }
                    }
                    break;
                    case 6: {
                        _localctx = new UnaryOperationContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(110);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == NUMBER || _la == WORD) {
                            {
                                setState(109);
                                assignment();
                            }
                        }

                        setState(112);
                        unaryOperator();
                        setState(113);
                        queryElem(1);
                    }
                    break;
                }
                _ctx.stop = _input.LT(-1);
                setState(129);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 20, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(127);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 19, _ctx)) {
                                case 1: {
                                    _localctx = new BinaryOperationContext(new QueryElemContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_queryElem);
                                    setState(117);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(118);
                                    binaryOperator();
                                    setState(119);
                                    queryElem(3);
                                }
                                break;
                                case 2: {
                                    _localctx = new OrderContext(new QueryElemContext(_parentctx, _parentState));
                                    pushNewRecursionContext(_localctx, _startState, RULE_queryElem);
                                    setState(121);
                                    if (!(precpred(_ctx, 3)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                    setState(122);
                                    match(LT);
                                    setState(123);
                                    queryElem(0);
                                    setState(125);
                                    _errHandler.sync(this);
                                    switch (getInterpreter().adaptivePredict(_input, 18, _ctx)) {
                                        case 1: {
                                            setState(124);
                                            proximity();
                                        }
                                        break;
                                    }
                                }
                                break;
                            }
                        }
                    }
                    setState(131);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 20, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final ProximityContext proximity() throws RecognitionException {
        ProximityContext _localctx = new ProximityContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_proximity);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(132);
                match(SIMILARITY);
                setState(133);
                match(NUMBER);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AlignOperatorContext alignOperator() throws RecognitionException {
        AlignOperatorContext _localctx = new AlignOperatorContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_alignOperator);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(137);
                _errHandler.sync(this);
                _alt = 1;
                do {
                    switch (_alt) {
                        case 1: {
                            {
                                setState(135);
                                match(EXPONENT);
                                setState(136);
                                alignElem();
                            }
                        }
                        break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    setState(139);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 21, _ctx);
                } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AlignElemContext alignElem() throws RecognitionException {
        AlignElemContext _localctx = new AlignElemContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_alignElem);
        try {
            setState(163);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 22, _ctx)) {
                case 1:
                    _localctx = new IndexContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(141);
                    match(WORD);
                    setState(142);
                    match(COLON);
                    setState(143);
                    queryLiteral();
                }
                break;
                case 2:
                    _localctx = new IndexContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(144);
                    match(PAREN_LEFT);
                    setState(145);
                    match(WORD);
                    setState(146);
                    match(COLON);
                    setState(147);
                    queryLiteral();
                    setState(148);
                    match(PAREN_RIGHT);
                }
                break;
                case 3:
                    _localctx = new NertagContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(150);
                    match(WORD);
                    setState(151);
                    match(DOT);
                    setState(152);
                    match(WORD);
                    setState(153);
                    match(COLON);
                    setState(154);
                    queryLiteral();
                }
                break;
                case 4:
                    _localctx = new NertagContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(155);
                    match(PAREN_LEFT);
                    setState(156);
                    match(WORD);
                    setState(157);
                    match(DOT);
                    setState(158);
                    match(WORD);
                    setState(159);
                    match(COLON);
                    setState(160);
                    queryLiteral();
                    setState(161);
                    match(PAREN_RIGHT);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssignmentContext assignment() throws RecognitionException {
        AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_assignment);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(165);
                _la = _input.LA(1);
                if (!(_la == NUMBER || _la == WORD)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(166);
                match(ASSIGN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ContextConstraintContext contextConstraint() throws RecognitionException {
        ContextConstraintContext _localctx = new ContextConstraintContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_contextConstraint);
        try {
            setState(172);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 23, _ctx)) {
                case 1:
                    _localctx = new ParContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(168);
                    match(MINUS);
                    setState(169);
                    match(PAR);
                }
                break;
                case 2:
                    _localctx = new SentContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(170);
                    match(MINUS);
                    setState(171);
                    match(SENT);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IndexOperatorContext indexOperator() throws RecognitionException {
        IndexOperatorContext _localctx = new IndexOperatorContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_indexOperator);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(174);
                match(WORD);
                setState(175);
                match(COLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final QueryLiteralContext queryLiteral() throws RecognitionException {
        QueryLiteralContext _localctx = new QueryLiteralContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_queryLiteral);
        try {
            setState(180);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case WORD:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(177);
                    match(WORD);
                }
                break;
                case NUMBER:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(178);
                    match(NUMBER);
                }
                break;
                case BRACKET_LEFT:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(179);
                    interval();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IntervalContext interval() throws RecognitionException {
        IntervalContext _localctx = new IntervalContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_interval);
        int _la;
        try {
            setState(196);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 27, _ctx)) {
                case 1:
                    _localctx = new NumberRangeContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(182);
                    match(BRACKET_LEFT);
                    setState(183);
                    match(NUMBER);
                    setState(184);
                    match(RANGE);
                    setState(185);
                    match(NUMBER);
                    setState(186);
                    match(BRACKET_RIGHT);
                }
                break;
                case 2:
                    _localctx = new DateRangeContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(187);
                    match(BRACKET_LEFT);
                    setState(189);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == DATE) {
                        {
                            setState(188);
                            match(DATE);
                        }
                    }

                    setState(191);
                    match(RANGE);
                    setState(193);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == DATE) {
                        {
                            setState(192);
                            match(DATE);
                        }
                    }

                    setState(195);
                    match(BRACKET_RIGHT);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConstraintContext constraint() throws RecognitionException {
        return constraint(0);
    }

    private ConstraintContext constraint(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ConstraintContext _localctx = new ConstraintContext(_ctx, _parentState);
        ConstraintContext _prevctx = _localctx;
        int _startState = 22;
        enterRecursionRule(_localctx, 22, RULE_constraint, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(210);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case PAREN_LEFT: {
                        setState(199);
                        match(PAREN_LEFT);
                        setState(200);
                        constraint(0);
                        setState(201);
                        match(PAREN_RIGHT);
                    }
                    break;
                    case NUMBER:
                    case WORD: {
                        setState(203);
                        reference();
                        setState(204);
                        comparisonOperator();
                        setState(205);
                        reference();
                    }
                    break;
                    case NOT: {
                        setState(207);
                        unaryOperator();
                        setState(208);
                        constraint(1);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                _ctx.stop = _input.LT(-1);
                setState(218);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 29, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new ConstraintContext(_parentctx, _parentState);
                                pushNewRecursionContext(_localctx, _startState, RULE_constraint);
                                setState(212);
                                if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                setState(213);
                                binaryOperator();
                                setState(214);
                                constraint(3);
                            }
                        }
                    }
                    setState(220);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 29, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final ReferenceContext reference() throws RecognitionException {
        ReferenceContext _localctx = new ReferenceContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_reference);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(221);
                _la = _input.LA(1);
                if (!(_la == NUMBER || _la == WORD)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(222);
                match(DOT);
                setState(223);
                match(WORD);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ComparisonOperatorContext comparisonOperator() throws RecognitionException {
        ComparisonOperatorContext _localctx = new ComparisonOperatorContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_comparisonOperator);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(225);
                _la = _input.LA(1);
                if (!(_la == EQ || _la == NEQ)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BinaryOperatorContext binaryOperator() throws RecognitionException {
        BinaryOperatorContext _localctx = new BinaryOperatorContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_binaryOperator);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(227);
                _la = _input.LA(1);
                if (!(_la == OR || _la == AND)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final UnaryOperatorContext unaryOperator() throws RecognitionException {
        UnaryOperatorContext _localctx = new UnaryOperatorContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_unaryOperator);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(229);
                match(NOT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
        switch (ruleIndex) {
            case 2:
                return queryElem_sempred((QueryElemContext) _localctx, predIndex);
            case 11:
                return constraint_sempred((ConstraintContext) _localctx, predIndex);
        }
        return true;
    }

    private boolean queryElem_sempred(QueryElemContext _localctx, int predIndex) {
        switch (predIndex) {
            case 0:
                return precpred(_ctx, 2);
            case 1:
                return precpred(_ctx, 3);
        }
        return true;
    }

    private boolean constraint_sempred(ConstraintContext _localctx, int predIndex) {
        switch (predIndex) {
            case 2:
                return precpred(_ctx, 2);
        }
        return true;
    }

    public static class RootContext extends ParserRuleContext {
        public RootContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        public QueryContext query() {
            return getRuleContext(QueryContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(EqlParser.EOF, 0);
        }

        public TerminalNode QUERY_CONSTRAINT_SEPARATOR() {
            return getToken(EqlParser.QUERY_CONSTRAINT_SEPARATOR, 0);
        }

        public ConstraintContext constraint() {
            return getRuleContext(ConstraintContext.class, 0);
        }

        @Override
        public int getRuleIndex() {
            return RULE_root;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof EqlListener) ((EqlListener) listener).enterRoot(this);
        }
